# R-Type-Revival

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py  docker-compose.yaml  install.sh  install_linux.sh  main.cpp  requirements.txt  rfc4890.txt  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: compile.yaml  create_release.yaml  format.yaml  release.yaml
client/: CMakeLists.txt
client/assets/player/: heart.png:Zone.Identifier
client/include/: client.hpp  command_line_arguments.hpp  config.hpp  entity_factory.hpp  game.hpp  game_states.hpp  includes.hpp  menu.hpp  player.hpp  textures.hpp  utils.hpp
client/include/managers/: game_manager.hpp  input_manager.hpp  network_manager.hpp  player_profile_manager.hpp  resource_manager.hpp  scene_manager.hpp  settings_manager.hpp
client/include/utility/: audio_utility.hpp
client/src/: animation.cpp  client.cpp  command_line_arguments.cpp  entity_factory.cpp  event.cpp  game.cpp  main.cpp  menu.cpp  parallax.cpp  parse_arguments.cpp  player.cpp  sound.cpp  textures.cpp  window.cpp
client/src/managers/: game_manager.cpp  input_manager.cpp  network_manager.cpp  player_profile_manager.cpp  resource_manager.cpp  scene_manager.cpp  settings_manager.cpp
client/src/network/: network_manager.cpp
client/src/proto/: r_type.pb.cc  r_type.pb.h  r_type.proto
client/src/systems/: about_system.cpp  animationSystem.cpp  animation_system.cpp  enemySystem.cpp  enemy_system.cpp  lobby_system.cpp  menu_system.cpp  parallax_system.cpp  planet_system.cpp  projectile_system.cpp  render_system.cpp  settings_system.cpp  tutorial_system.cpp  velocity_system.cpp
client/src/utils/: get_direction.cpp  get_random_float.cpp
common/command_line_arguments/: command_line_arguments.hpp
common/components/: animation.hpp  bulletType.hpp  clock.hpp  collider.hpp  component_includes.hpp  damage.hpp  enemy.hpp  enemyAI.hpp  health.hpp  lobby.hpp  menu_items.hpp  owner.hpp  parallax.hpp  planet.hpp  player.hpp  renderable.hpp  scene.hpp  settings_items.hpp  soundComponent.hpp  transform.hpp  velocity.hpp  weapon.hpp
common/proto/: CMakeLists.txt  r_type.proto
common/utils/: id_generator.hpp
libs/ECS/include/: ecs.hpp  entity.hpp  logger.hpp  registry.hpp  spart_set.hpp
libs/ECS/src/: main.cpp
libs/ECS/src/components/: animation.hpp  collider.hpp  enemyAI.hpp  health.hpp  inputHandler.hpp  renderable.hpp  score.hpp  transform.hpp  velocity.hpp  weapon.hpp
libs/EnTT/: entt.hpp
server/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  client.cpp  cmake_install.cmake  notes.txt
server/UDP/: client.cpp  payload.pb.cc  payload.pb.h  payload.proto  serveur.cpp
server/client/: cmake_install.cmake  r-type_client
server/common/proto/: cmake_install.cmake
server/include/: config.hpp  game_metadata.hpp  server.hpp  utils.hpp
server/include/managers/: entity_manager.hpp  game_manager.hpp  network_manager.hpp  players_manager.hpp  players_session_manager.hpp  udp_server.hpp  wave_manager.hpp
server/server/: cmake_install.cmake  r-type_server
server/src/: main.cpp
server/src/managers/: entity_manager.cpp  game_manager.cpp  network_manager.cpp  players_session_manager.cpp  wave_manager.cpp
server/src/proto/: payload.pb.h  payload.proto  r_type.pb.cc  r_type.pb.h  r_type.proto
server/src/systems/: collision_systems.cpp  enemy_system.cpp  velocity_system.cpp
server/src/utils/: generate_id.cpp  get_direction.cpp
server/tests/: client.cpp
tests/: spartset.cpp  spartset.hpp  test_registry.hpp  test_sparse_set.hpp  tests.cpp
